# SNPhylo2

./: CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: conda.yml  docker.yml  docs.yml  pypi.yml  tests.yml
benchmarks/: README.md  benchmark_suite.py  tree_accuracy_benchmark.py
conda/: README.md  bld.bat  build.sh  meta.yaml
containers/: Dockerfile  environment.yml
docs/: index.md  installation.md
examples/: README.md  download_demo_data.py  generate_manuscript_figures.py
snphylo2/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py
snphylo2/filtering/: __init__.py  variant_filters.py
snphylo2/io/: __init__.py  vcf_reader.py  writers.py
snphylo2/population/: __init__.py  ld_decay.py  popgen.py
snphylo2/pruning/: __init__.py  ld_pruner.py
snphylo2/qc/: __init__.py  qc_module.py
snphylo2/report/: __init__.py  html_report.py
snphylo2/tree/: __init__.py  tree_builder.py  tree_comparison.py
snphylo2/utils/: __init__.py  checkpoint.py  logging_utils.py  validators.py
snphylo2/visualization/: ld_plots.py  plots.py
tests/: __init__.py
tests/fixtures/: generate_simulated_data.py  generate_test_vcf.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_config.py  test_filters.py
workflows/nextflow/: main.nf  nextflow.config
workflows/profiles/slurm/: config.yaml
workflows/snakemake/: Snakefile  config.yaml
