[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snphylo2"
version = "0.1.0"
description = "Next-generation phylogenomic pipeline from SNP data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ankush Sharma", email = "mr.ank2999@gmail.com" },
]
keywords = [
    "phylogenetics",
    "SNP",
    "genomics",
    "population-genetics",
    "bioinformatics",
    "evolution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-yaml>=1.0.0",
    "cyvcf2>=0.30.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scikit-allel>=1.3.0",
    "pysam>=0.22.0",
    "zarr>=2.16.0",
    "dask>=2023.0.0",
    "distributed>=2023.0.0",
    "jinja2>=3.1.0",
    "plotly>=5.15.0",
    "kaleido>=0.2.0",
    "biopython>=1.81",
    "ete3>=3.1.0",
    "toytree>=2.0.0",
    "newick>=1.9.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
population = [
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.6.0",
]

[project.scripts]
snphylo2 = "snphylo2.cli:main"

[project.urls]
Homepage = "https://github.com/ank-man/snphylo2"
Documentation = "https://snphylo2.readthedocs.io"
Repository = "https://github.com/ank-man/snphylo2"
"Bug Tracker" = "https://github.com/ank-man/snphylo2/issues"

[tool.hatch.build.targets.wheel]
packages = ["snphylo2"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_external: marks tests requiring external tools",
]

[tool.coverage.run]
source = ["snphylo2"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
